--- a/src/components/About.css
+++ b/src/components/About.css
@@ -18,18 +18,23 @@
   line-height: 1.6;
 }
 .demo-video-section {
-  /* padding: 40px 20px; */
   text-align: center;
-  /* background-color: var(--header-bg); */
-  /* color: var(--text-color); */
 }
-/* .demo-video-section h2 {
-  margin-bottom: 20px;
-  font-size: 1.5rem;
-} */
 .demo-video {
   width: 100%;
   max-width: 720px;
   border-radius: 12px;
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
+}
+
+@media (max-width: 768px) {
+  .about h2 {
+    font-size: 1.5rem;
+  }
+
+  .about p {
+    font-size: 1rem;
+    padding: 0 15px;
+    text-align: justify;
+  }
 }
