--- a/src/components/LeagueTable.css
+++ b/src/components/LeagueTable.css
@@ -1,22 +1,39 @@
 .league-table-section {
-	padding: 2rem;
-}
-
-.league-table {
-	border-radius: 6px;
+	padding: 1rem;
 	width: 100%;
+	box-sizing: border-box;
+  }
+  
+  .league-table {
+	width: 100%;
+	max-width: 500px;
 	border-collapse: collapse;
 	background-color: var(--card-color);
 	box-shadow: 0 0 10px var(--shadow-color);
+	border-radius: 6px;
+	overflow: hidden;
+	table-layout: auto;
   }
   
+
+  .table-group {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	gap: 2rem;
+	width: 100%;
+  }
+
+  
+  .table-group > div {
+	width: 100%;
+	max-width: 500px;
+  }
   .league-table th,
   .league-table td {
 	color: var(--shadow-color);
 	padding: 12px 16px;
 	text-align: left;
-
-	/* border-bottom: 1px solid #e0e0e0; */
   }
   
   .team-info {
@@ -47,7 +64,6 @@
 	line-height: 20px;
 	font-size: 12px;
 	font-weight: bold;
-	/* color: white; */
   }
   
   .result.w {
@@ -62,11 +78,36 @@
 	background: gray;
   }
 
+
   @media (max-width: 768px) {
+	.league-table {
+		display: block;
+		overflow-x: auto;
+		/* font-size: 14px; */
+	  }
+	.league-table th,
+	.league-table td {
+	  padding: 8px;
+	  font-size: 14px;
+	}
+  
+	.team-logo {
+	  width: 20px;
+	  height: 20px;
+	}
+  
+	.form .result {
+	  width: 18px;
+	  height: 18px;
+	  font-size: 10px;
+	  line-height: 18px;
+	}
+  }
+  
+  /* @media (max-width: 768px) {
 	.league-table {
 	  display: block;
 	  overflow-x: auto;
-	  white-space: nowrap;
 	  font-size: 14px;
 	}
   
@@ -104,4 +145,4 @@
 	text-align: center;
 	color: var(--text-color);
 	margin-bottom: 0.5rem;
-  }
+  } */
