--- a/src/App.css
+++ b/src/App.css
@@ -17,16 +17,19 @@
 }
 
 body {
-  /* background: radial-gradient(circle, rgb(0, 238, 255, 0.09), rgb(220, 202, 202)); */
   margin: 0;
   font-family: Arial, sans-serif;
   background-color:var(--bg-color);
   color: var(--text-color);
-  /* transition: background-color 0.3s ease, color 0.3s ease; */
 }
 html {
   scroll-behavior: smooth;
 
+}
+
+section {
+  border-bottom: 0.3px solid var(--text-color);
+  box-shadow: 0 8px 10px var(--shadow-color);
 }
 header {
   background-color: var(--bg-color);
@@ -37,6 +40,7 @@ a {
 h2 {
   text-align: center;
 }
+
 @media (max-width: 768px) {
   h2 {
     font-size: 1.5rem;
@@ -57,8 +61,10 @@ h2 {
     font-size: 0.95rem;
   }
 
-  section {
+section {
+    border: 1px solid var(--text-color);
     padding: 20px 12px;
+
   }
 
   .team-card, .result-row {
