--- a/src/components/About.css
+++ b/src/components/About.css
@@ -1,7 +1,11 @@
 .about {
+  border: none;
   padding: 60px 20px;
   background-color: var(--bg-color);
   text-align: center;
+	box-shadow: 0 3px 10px var(--shadow-color);
+  margin: 8px 8px;
+  border-radius: 4px;
 }
 
 .about h2 {
@@ -17,25 +21,91 @@
   color: var(--text-color);
   line-height: 1.6;
 }
+
+/*------- Demo Video section ---------------*/
+
 .demo-video-section {
-  padding-top: 70px;
+  padding: 70px 0 0;
+  width: 100%;
   text-align: center;
+  overflow: hidden;
+
 }
+
 .demo-video {
   width: 100%;
-  max-width: 720px;
-  border-radius: 12px;
-  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
+  height: auto;
+  aspect-ratio: 16 / 9;
+  object-fit: cover;
+  display: block;
+}
+
+.demo-video-container {
+  position: relative;
+  width: 100%;
+  max-width: 100%;
+  margin: 0 auto;
+  padding: 0;
+  overflow: hidden;
+  box-sizing: border-box;
+  direction: rtl;
+  /* display: flex;
+  justify-content: flex-end; */
+}
+
+
+.demo-video-container::after {/*------- background shadow ----*/
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 40%;
+  background: linear-gradient(to top, rgba(0, 0, 0, 0.88), transparent);
+  z-index: 2;
+  pointer-events: none;
+  
+}
+
+
+.demo-video-text {
+  margin: 0.4rem auto;
+  position: absolute;
+  bottom: 1px;
+  right: 0.7rem;
+  color: var(--text-color);
+  font-size: 1.8rem;
+  z-index: 3;
+  text-align: right;
+  direction: rtl;
+  line-height: 1.4;
+  /* padding: 0.5rem 1rem; */
+  max-width: 90%;
+  box-sizing: border-box;
+  white-space: normal; 
 }
 
 @media (max-width: 768px) {
   .about h2 {
     font-size: 1.5rem;
   }
-
   .about p {
     font-size: 1rem;
     padding: 0 15px;
     text-align: justify;
+  }
+}
+
+@media (max-width: 768px) {
+  .demo-video-text {
+    padding: 0;
+    font-size: 1rem;
+  }
+}
+
+@media (max-width: 480px) {
+  .demo-video-text {
+    font-size: 1rem;
+    padding: 0;
   }
 }
