--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -1,8 +1,12 @@
 .contact {
+  border: none;
   color: var(--text-color);
   padding: 60px 20px;
   background-color: var(--bg-color);
   text-align: center;
+	box-shadow: 0 3px 10px var(--shadow-color);
+  margin: 8px 8px;
+  border-radius: 4px;   
 }
 
 .contact h2 {
