--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,7 +1,40 @@
 .footer {
-  background-color: var(--bg-color);
+  background: linear-gradient(to bottom, #2b65a0, #050d14); 
   color: var(--text-color);
   padding: 20px;
   text-align: center;
   font-size: 0.95rem;
+  border-top: 1px solid #175384;
+  box-shadow: 0 2px 10px var(--shadow-color);
+}
+
+.social {
+  display: flex;
+  justify-content:space-between;
+  border-bottom: 1px solid var(--text2-color);
+  padding-bottom: 16px;
+}
+
+.social h2 {
+  text-decoration: underline;
+
+  
+}
+
+.social-media a {
+  background-color: var(--footer-color);
+  border-radius: 16px;
+  color: var(--text-color);
+  text-decoration: none;
+  padding: 10px;
+  margin-left: 30px;
+  font-size: 1.2rem;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 0.6s ease;
+}
+
+.social-media a:hover {
+  background-color: var(--text2-color);
 }
