--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -9,6 +9,8 @@
   top: 0;
   width: 100%;
   z-index: 1000;
+    /* border-bottom: 0 solid var(--text-color); */
+  box-shadow: 0 10px 12px var(--shadow-color);
 }
 
 .logo {
@@ -64,7 +66,6 @@
 
 .nav a {
   text-decoration: none;
-  /* color: white; */
   font-size: 1rem;
   transition: color 0.2s;
 }
