--- a/src/components/Results.css
+++ b/src/components/Results.css
@@ -1,7 +1,11 @@
 .results {
+  border: none;
   padding: 60px 20px;
   background-color: var(--bg-color);
   text-align: center;
+  box-shadow: 0 3px 10px var(--shadow-color);
+  margin: 8px 8px;
+  border-radius: 4px;
 }
 
 .results h2 {
