--- a/src/components/Results.css
+++ b/src/components/Results.css
@@ -26,8 +26,10 @@
   background-color: var(--card-color);
   padding: 15px 20px;
   border-radius: 6px;
-  box-shadow: 0 2px 5px var(--shadow-color);
-  color: black;
+  box-shadow: 0 6px 6px var(--shadow-color);
+}
+.team-result {
+  color: var(--shadow-color);
 }
 .score {
   color: rgba(0, 0, 0, 0.56);
