--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -1,6 +1,6 @@
 .contact {
   border: none;
-  color: var(--text-color);
+  color: var(--para-color);
   padding: 60px 20px;
   background-color: var(--bg-color);
   text-align: center;
@@ -12,7 +12,7 @@
 .contact h2 {
   font-size: 2rem;
   margin-bottom: 20px;
-  color:var(--text-color);
+  color:var(--tittle-color);
 }
 .contact-form {
   max-width: 600px;
