--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -1,5 +1,5 @@
 .hero {
-  color: var(--text-color);
+  color: var(--tittle-color);
   padding: 100px 20px;
   text-align: center;
   background-color: var(--bg-color);
@@ -9,6 +9,7 @@
   border: none;
   box-shadow: 0 3px 10px var(--shadow-color);
   border-radius: 4px;
+  direction: rtl;
 }
 
 .hero h2 {
@@ -19,9 +20,10 @@
 
 .hero p {
   font-size: 1.2rem;
-  line-height: 1.6;
+  line-height: 1.9;
   margin: 0 auto;
   max-width: 600px;
+  color: var(--new-color);
 }
 .hero h2, .hero p {
   max-width: 90%;
