--- a/src/components/VideoEvent.css
+++ b/src/components/VideoEvent.css
@@ -6,6 +6,7 @@
 	box-shadow: 0 3px 10px var(--shadow-color);
 	margin: 8px 8px;
 	border-radius: 4px;
+	direction: rtl;
   }
   
   .video-event-card {
@@ -20,19 +21,47 @@
   
   .video-wrapper {
 	position: relative;
+	width: 100%;
+	padding-bottom: 56.25%;
+	height: 0;
+	box-shadow: 0 8px 12px var(--shadow-color);
+	border-radius: 8px;
+	overflow: hidden;
+	max-width: 700px;
+	margin: 0 auto;
+  }
+  
+  .event-video {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	border: 0;
+	border-radius: 8px;
+  }
+  
+  /* .video-wrapper {
+	position: relative;
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	box-shadow: 0 8px 12px var(--shadow-color);
 	border-radius: 8px;
 
-  }
-  
-  .event-video {
+  } */
+
+  /* .event-video {
 	width: 100%;
+	height: 400px;
 	border-radius: 8px;
-	z-index: 1;
-  }
+	box-shadow: 0 3px 12px rgba(0, 0, 0, 0.3);
+  } */
+  /* @media (max-width: 768px) {
+	.event-video {
+	  height: 240px;
+	}
+  } */
   
   .arrow {
 	background: rgba(0, 0, 0, 0.3);
@@ -80,51 +109,3 @@
   .dot.active {
 	background: var(--accent-color);
   }
-/*----------------*/ 
-
-/* .video-event-section {
-	padding: 2rem 1rem;
-	background-color: var(--header-bg);
-	text-align: center;
-  }
-  
-  .video-event-card {
-	max-width: 700px;
-	margin: 0 auto;
-	background: var(--header-bg);
-	border-radius: 12px;
-	box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-	padding: 1.5rem;
-  }
-  
-  .event-video {
-	width: 100%;
-	border-radius: 8px;
-	margin: 1rem 0;
-  }
-  
-  .video-switch-buttons {
-	display: flex;
-	justify-content: center;
-	gap: 10px;
-	margin-top: 1rem;
-  }
-  
-  .video-switch-buttons button {
-	background-color: var(--accent-color);
-	border: none;
-	color: white;
-	padding: 8px 12px;
-	border-radius: 6px;
-	cursor: pointer;
-	transition: background 0.3s ease;
-  }
-  
-  .video-switch-buttons button:hover {
-	background-color: #005bb5;
-  }
-  
-  .video-switch-buttons button.active {
-	background-color: #003f88;
-  }
-   */
