--- a/src/components/About.css
+++ b/src/components/About.css
@@ -8,7 +8,7 @@
   border-radius: 4px;
   box-shadow: 0 3px 10px var(--shadow-color);
   direction: rtl;
-  max-width: 1000px;
+  /* max-width: 1000px; */
   animation: fadeInUp 1s ease-in-out;
 }
 
