Update Results.css stat color

--- a/src/components/Results.css
+++ b/src/components/Results.css
@@ -32,11 +32,9 @@
   border-radius: 6px;
   box-shadow: 0 6px 6px var(--shadow-color);
 }
-/* .result-row h3 {
-  font-size: 1.2rem;
-  color: white;
-  margin: 0;
-} */
+.result-row h3 {
+  color: green;
+} 
 .team-result {
   color: var(--shadow-color);
 }
